@@ -31,6 +31,8 @@ git-annex (5.2015022) UNRELEASED; urgency=medium
     (For example, a newly checked out git submodule.)
   * Added SETURIPRESENT and SETURIMISSING to external special remote protocol,
     useful for things like ipfs that don't use regular urls.
+  * addurl: Added --raw option, which bypasses special handling of quvi,
+    bittorrent etc urls.
 
  -- Joey Hess <id@joeyh.name>  Thu, 19 Feb 2015 14:16:03 -0400
 
